# kbi_labs

./: .bandit  .env.example  .env.template  .gitignore  30_DAY_MVP_ROADMAP.md  ACCOMPLISHMENTS.md  API_ACTIVATION_PLAN.md  API_STATUS_REPORT.md  CLEANUP_BACKUP_LIST.md  CLEANUP_COMPLETE.md  CLEANUP_OBSOLETE_FILES.md  CLEANUP_REPORT.md  CLEANUP_SUMMARY.md  CONSOLIDATION_REPORT.md  CONTRIBUTING.md  DASHBOARD_COMPLETE_WITH_DATA.md  DASHBOARD_STATUS_REPORT.md  DEPLOYMENT_RESOLUTION.md  DEV_ENVIRONMENT_SETUP.md  Dockerfile  ENHANCED_DATA_SOURCES_ROADMAP.md  FREE_API_INTEGRATION_PLAN.md  FRONTEND_STRATEGIC_INTELLIGENCE_PLAN.md  GITHUB_SETUP_INSTRUCTIONS.md  HEALTH_CHECK_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ARCHITECTURE.md  INTEGRATION_COMPLETE.md  NEXT_DEVELOPMENT_PHASE.md  OPTIMIZATION_COMPLETE.md  PERFORMANCE_SOLUTION_COMPLETE.md  PHASE2_CHECKLIST.md  PLATFORM_COMPLETE.md  PLATFORM_STATUS_REPORT.md  PROCUREMENT_PLATFORM_LAUNCH_READY.md  PRODUCTION_READINESS_ANALYSIS.md  PRODUCTION_READY_QUICKSTART.md  PROJECT_PROGRESS_CHECKPOINT.md  QUICKSTART.md  QUICK_START_ML.md  (+192 more)
ai_insights/: .env.example  add_logging.py  ai_insights_api.py  ai_insights_api_complete.py  ai_insights_api_working.py  company-details-enhanced.html  debug_ai.py  enhanced_insights_api.py  enhanced_insights_api_fixed.py  fix_ai_insights.py  fix_context.py  fix_cors.py  requirements.txt  test_openai.py  test_openai_simple.py  update_context.py
api-umbrella/: signup.html
backend/: setup_data_enrichment.py
cleanup_backup/: api_server_backup_1.py  index.html.bak
kbi_api/: app.py
kbi_dashboard/: .gitignore  api_proxy.js  app.py  companies.json  company-details-broken.html  company-details-original.html  company-details-test.html  company-details.html  dashboard-simple.html  fix_ai_display.py  index.html  package-lock.json  package.json  portfolio.html  portfolio_old.html  tailwind.config.js  test.html  update_dashboard.py  update_endpoints.py  vite.config.js
migrations/: add_enrichment_table.sql
models/: contract_success_model.pkl  contract_success_scaler.pkl  fraud_detection_model.pkl  fraud_detection_scaler.pkl  primary_naics_encoder.pkl  state_encoder.pkl
monitoring/: alert_rules.yml  prometheus.yml
scripts/: cleanup_repository.py  create_migration.py  generate_secrets.py  generate_test_tokens.py  init_db.sql  init_kafka_topics.sh  run_dsbs_processing.sh  security_audit.py  security_scan.sh  setup_dev.sh  setup_monitoring.sh  test_context_api.sh  test_production_features.py  upload_dsbs_data.sh
src/: auth_sqlite.py  db.py  main.py  main.py.backup  main_unified.py  main_update.py  main_with_static.py
static/: auth_demo.html  auth_demo_v2.html  enhanced_demo.html  enhanced_demo_v2.html  index.html  (+4 more)
(+385 files in other folders)
